# NetworkX_friend_net_graph_system

./: Poetry Project File  README.md  pyproject.toml
backend/config/: celery.py  settings.py  urls.py
backend/core/: models.py  tasks.py  urls.py  views.py
backend/templates/core/: index.html  success.html
