[tool.poetry]
name = "networkx-frend-net-graph-system"
version = "0.1.0"
description = ""
authors = ["studio <dmitrij-bezgubov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
