[tool.poetry]
name = "networkx-frend-net-graph-system"
version = "0.1.0"
description = "A system for visualizing social network friend graphs using NetworkX."
authors = ["studio <dmitrij-bezgubov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
celery = ">=5.0"
redis = ">=4.0"
psycopg2-binary = ">=2.9"
networkx = ">=2.8"
matplotlib = ">=3.5"
django-environ = ">=0.9"
dotenv = "^0.9.9"
load-dotenv = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
